b/w sections spacing fix

--- a/frontend/src/components/Section.css
+++ b/frontend/src/components/Section.css
@@ -1,32 +1,37 @@
 /* Style the button that is used to open and close the collapsible content */
 .section {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-  }
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
   
-  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-  .active,
-  .section:hover {
-    background-color: #ccc;
-  }
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active,
+.section:hover {
+  background-color: #ccc;
+}
   
   /* Style the collapsible content. Note: hidden by default */
-  .section-content {
-    padding: 0 18px;
-    display: none;
-    overflow: hidden;
-    background-color: #f1f1f1;
-  }
+.section-content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
   
-  /* Show the section content when expanded */
-  .section-content.expanded {
-    display: block;
-  }
+
+}
   
+/* Show the section content when expanded */
+.section-content.expanded {
+  display: block;
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
